# Accounting

./: Cargo.toml  README.md  example.csv
data/: invoices_example.csv
src/: compute.rs  date.rs  invoices.rs  main.rs
