[package]
name = "accounting"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
